Fix overlapping between back button and teacher view item boxes.

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -69,6 +69,7 @@ ul {
   display: flex;
   flex-wrap: wrap;
   flex-direction: var(--flex-direction);
+  margin-top: 40px;
 }
 .UserBlock {
   flex: none;
